tests/lifetime/hll_loan_conflict.err.expected
error: at 9:5: [LT-LoanConflict] In function 'loan_conflict': cannot write to 'x': already borrowed by 'r'
   |
 9 |     x = 20;
   |     ^^^^^^
  = note: borrow of 'x' occurs here
   |
 8 |     let r = &mut x;
   |             ^^^^^^
  hint: the borrow of 'r' is active until its last use or explicit unborrow.
error: at 21:5: [LT-LoanConflict] In function 'defer_loan_conflict': cannot write to 'x': already borrowed by 'r'
    |
 21 |     x = 2;
    |     ^^^^^
  = note: borrow of 'x' occurs here
    |
 19 |     let r = &x;
    |             ^^
  hint: the borrow of 'r' is active until its last use or explicit unborrow.
